[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/VioletSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Wildling-Wallpaper 1440.png" type="Texture" id=2]
[ext_resource path="res://Assets/GWJ-41-Theme Ocean.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/fishy.png" type="Texture" id=5]
[ext_resource path="res://Assets/sound.png" type="Texture" id=6]
[ext_resource path="res://Assets/LogoA&A.jpg" type="Texture" id=7]
[ext_resource path="res://Assets/bait.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.309804, 0.647059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bait" type="Sprite" parent="."]
position = Vector2( 246, 267 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -188.5
margin_top = 49.0
margin_right = 188.5
margin_bottom = 149.0
custom_fonts/font = SubResource( 1 )
text = "The Bait"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.382653
anchor_top = 0.658594
anchor_right = 0.617347
anchor_bottom = 0.747656
custom_fonts/font = SubResource( 2 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="intro3" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.960784, 0.764706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoA&A" type="Sprite" parent="intro3"]
position = Vector2( 244, 320 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="intro2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gwj-41-ThemeOcean" type="Sprite" parent="intro2"]
position = Vector2( 244, 78 )
scale = Vector2( 0.7, 0.75 )
texture = ExtResource( 3 )

[node name="Sound" type="Sprite" parent="intro2"]
position = Vector2( 364, 375 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="Fishy" type="Sprite" parent="intro2"]
position = Vector2( 125, 375 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="intro1" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wildling-Wallpaper1440" type="Sprite" parent="intro1"]
position = Vector2( 246, 324 )
scale = Vector2( 0.4, 0.5 )
texture = ExtResource( 2 )

[node name="introTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="introTimer" to="." method="_on_introTimer_timeout"]
